# Escrow

./: .env.example  .gitignore  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.mjs
assets/: manifest.json
core/: settings.py  urls.py
escrow/: admin.py  forms.py  models.py  urls.py  views.py
escrow/migrations/: 0001_initial.py  0002_escrowtransaction_deadline_and_more.py
services/: email_service.py  paystack.py
static/js/: main.js
staticfiles/django-assets/: test-DxkAHUPd.css
templates/: base.html
templates/escrow/: confirm_delivery.html  confirmation_success.html  create_link.html  home.html  login.html  payment_link_detail.html  payment_page.html  payment_success.html  register_seller.html  seller_dashboard.html  signup.html
theme/static_src/: package-lock.json
